--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,14 +1,16 @@
-name: shoppingt_list
+name: shopping_list
 description: "A new Flutter project."
-publish_to: 'none'
+publish_to: "none"
 version: 0.1.0
 
 environment:
-  sdk: '>=3.4.3 <4.0.0'
+  sdk: ">=3.4.3 <4.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
+
+  cupertino_icons: ^1.0.2
 
 dev_dependencies:
   flutter_test:
